@@ -180,5 +180,7 @@ namespace libtorrent {
 		return msg;
 	}
 
+	cache_flushed_alert::cache_flushed_alert(torrent_handle const& h): torrent_alert(h) {}
+
 } // namespace libtorrent
 
